--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -41,7 +41,7 @@
     <nav aria-label="Page navigation">
         <ul class="pagination">
             <li class="page-item" ng-click="previousPage()"><a class="page-link" href="#">Previous</a></li>
-            <li class="page-item" ng-click="fillTable()"><a class="page-link" href="#">{{currentPage + 1}}</a></li>
+            <li class="page-item" ng-click="fillTable()"><a class="page-link" href="#">{{currentPage}}</a></li>
             <li class="page-item" ng-click="nextPage()"><a class="page-link" href="#">Next</a></li>
         </ul>
     </nav>
