--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -32,7 +32,7 @@
             <td>{{p.title}}</td>
             <td>{{p.price}}</td>
             <td>
-                <button class="btn btn-danger" ng-click="deleteProductById(p.id)">Удалить товар</button>
+                <button class="btn btn-primary" ng-click="cartAddProduct(p.id)">Добавить в корзину</button>
             </td>
         </tr>
         </tbody>
@@ -45,6 +45,40 @@
             <li class="page-item" ng-click="nextPage()"><a class="page-link" href="#">Next</a></li>
         </ul>
     </nav>
+
+    <h3>Корзина</h3>
+
+    <table class="table table-hover" cellpadding="0" cellspacing="0">
+        <thead class="thead-light">
+        <tr>
+            <td>Название</td>
+            <td>Цена за единицу</td>
+            <td>Количество</td>
+            <td>Стоимость</td>
+        </tr>
+        </thead>
+        <tbody>
+        <tr ng-repeat="p in Cart.items">
+            <td>{{p.title}}</td>
+            <td>{{p.price}}</td>
+            <td>
+                <div class="input-group">
+                    <button class="btn btn-primary" type="button" ng-click="cartRemoveProduct(p.id)">-</button>
+                    <input type="text" class="form-control" placeholder="0" aria-label="" value="{{p.count}}">
+                    <button class="btn btn-primary" type="button" ng-click="cartAddProduct(p.id)">+</button>
+                </div>
+            </td>
+            <td>{{p.itemsPrice}}</td>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td>{{Cart.totalPrice}}</td>
+        </tr>
+        </tbody>
+    </table>
+
     
 </div>
 </body>
