--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -46,38 +46,49 @@
         </ul>
     </nav>
 
-    <h3>Корзина</h3>
+    <h3 ng-show="Cart.totalPrice == 0">Корзина пуста!</h3>
 
-    <table class="table table-hover" cellpadding="0" cellspacing="0">
-        <thead class="thead-light">
-        <tr>
-            <td>Название</td>
-            <td>Цена за единицу</td>
-            <td>Количество</td>
-            <td>Стоимость</td>
-        </tr>
-        </thead>
-        <tbody>
-        <tr ng-repeat="p in Cart.items">
-            <td>{{p.title}}</td>
-            <td>{{p.price}}</td>
-            <td>
-                <div class="input-group">
-                    <button class="btn btn-primary" type="button" ng-click="cartRemoveProduct(p.id)">-</button>
-                    <input type="text" class="form-control" placeholder="0" aria-label="" value="{{p.count}}">
-                    <button class="btn btn-primary" type="button" ng-click="cartAddProduct(p.id)">+</button>
-                </div>
-            </td>
-            <td>{{p.itemsPrice}}</td>
-        </tr>
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td>{{Cart.totalPrice}}</td>
-        </tr>
-        </tbody>
-    </table>
+    <div ng-show="Cart.totalPrice != 0">
+        <h3>Корзина</h3>
+
+        <table class="table table-hover" cellpadding="0" cellspacing="0">
+            <thead class="thead-light">
+            <tr>
+                <td>Название</td>
+                <td>Цена за единицу</td>
+                <td>Количество</td>
+                <td>Стоимость</td>
+            </tr>
+            </thead>
+            <tbody>
+            <tr ng-repeat="ci in Cart.cartItems">
+                <td>{{ci.title}}</td>
+                <td>{{ci.price}}</td>
+                <td>
+                    <div class="input-group">
+                        <button class="btn btn-primary" type="button" ng-click="cartRemoveProduct(ci.productId)">-</button>
+                        <input type="text" class="form-control" placeholder="0" aria-label="" value="{{ci.quantity}}">
+                        <button class="btn btn-primary" type="button" ng-click="cartAddProduct(ci.productId)">+</button>
+                    </div>
+                </td>
+                <td>{{ci.itemsPrice}}</td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td>{{Cart.totalPrice}}</td>
+            </tr>
+            </tbody>
+        </table>
+        <button class="btn-primary btn-sm" type="button" ng-click = "setAllowClearCart()">Очистить корзину</button>
+
+        <div ng-show="allowClearCart == true">
+            Нажмите Да, чтобы подтвердить очистку корзины!
+            <button class="btn-danger btn-sm" type="button" ng-click = "cartClear()">Да</button>
+        </div>
+
+    </div>
 
     
 </div>
